src/tests/krate/publish/snapshots/all__krate__publish__dependencies__reject_new_crate_with_alternative_registry_dependency.snap
---
source: src/tests/krate/publish/dependencies.rs
expression: response.into_json()
---
{
  "errors": [
    {
      "detail": "Dependency `dep` is hosted on another registry. Cross-registry dependencies are not permitted on crates.io."
    }
  ]
}
