src/tests/krate/publish/snapshots/all__krate__publish__dependencies__reject_new_krate_with_non_exact_dependency.snap
---
source: src/tests/krate/publish/dependencies.rs
expression: response.into_json()
---
{
  "errors": [
    {
      "detail": "no known crate named `foo_dep`"
    }
  ]
}
